# tc-member-video-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SUBMISSION.md  pyproject.toml  render.yaml
.claude/: settings.local.json
app/: __init__.py  audio.py  branding.py  captions.py  config.py  costing.py  ffmpeg.py  jobs.py  main.py  models.py  pipeline.py  storage.py  transcription.py  video.py
assets/branding/: topcoder-star.json  topcoder_theme.json
assets/music/: CREDITS.md  README.md  topcoder-bed.m4a
challenge-notes/: 01-requirements-matrix.md  02-forum-deltas.md  03-reviewer-risk.md  04-verification-evidence.md  05-submission-freeze-checklist.md
demo-output/after/: captions.ass  captions.srt  captions_landscape.ass  captions_portrait.ass  manifest.json
demo-output/real-sample-after/: captions.srt
demo-output/real-sample-work/: music_bed.m4a  voice_clean.m4a  voice_music_mix.m4a
docs/: ARCHITECTURE.md  DEMO.md  DEPLOYMENT.md  TOOLING_BUDGET.md  WALKTHROUGH_RECORDING.md
samples/: job_local.json  job_real_sample.json  member_metadata.json
scripts/: create_before_after_demo.py  create_demo_video.py  generate_sample.py  run_demo.py  smoke_deployment.py
submission-evidence/: README.md
submission-evidence/raw/: api-job-final.json  api-job-response.json  before-after-demo.txt  demo-run.json  demo-video.txt  deployment-smoke-live.txt  deployment-smoke.txt  output-probe.txt  real-sample-run.json  (+1 more)
tests/: test_api.py  test_branding.py  test_captions.py  test_costing.py  test_models.py  test_pipeline.py  test_transcription.py
